--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,3 +45,10 @@ span {
 @keyframes blink {
   50% { border-color: transparent;}
 }
+
+.nav {
+  display: flex;
+  justify-content: flex-start;
+  padding: 100px;
+
+}
