Created Style nav

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,9 +46,10 @@ span {
   50% { border-color: transparent;}
 }
 
+/*
 .nav {
   display: flex;
   justify-content: flex-start;
   padding: 100px;
 
-}
+}*/
