--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,18 @@ span {
   overflow: hidden;
 }
 
+.btn {
+  @apply py-2 px-4 rounded;
+}
+
+.btn-blue {
+  @apply bg-gray-500 text-white
+}
+
+.btn-blue:hover {
+  @apply bg-blue-700
+}
+
 @keyframes typing {
   from { width: 0 }
 }
